# CIRA

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
bench/mcf/: Makefile  mcf.c  pbeampp.c  perf.data  perf.data.old
include/: CMakeLists.txt
include/Conversion/: CIRA.h  CMakeLists.txt  Passes.h  Passes.td
include/Dialect/: CMakeLists.txt  FunctionUtils.h  ReadFromProfile.h  RemoteMem.h  RemoteMem.td  RemoteMemTypeLower.h  WorkloadAnalysis.h
include/Dialect/Transforms/: Passes.h  Passes.td
include/Lowering/: CMakeLists.txt  EmitLLVM.h  LoweringLocal.h  LoweringRemote.h  Passes.h  Passes.td  RemoteMemToLLVM.h
runtime/: affinity.cpp  affinity_bc.cpp  affinity_btree.cpp  affinity_mcf.cpp  channel.cpp  lockfreequeue.h  test_local.c  test_remote.c  utils.h
src/: CMakeLists.txt  driver.cpp
src/Conversion/: CIRA.cpp  CMakeLists.txt  SCFCIRAPattern.cpp
src/Dialect/: CMakeLists.txt  FunctionUtils.cpp  ReadFromProfile.cpp  RemoteMemDialect.cpp  WorkloadAnalysis.cpp
src/Dialect/Transforms/: CMakeLists.txt  SearchRemote.cpp
src/Lowering/: CMakeLists.txt  EmitLLVM.cpp  RemoteMemToLLVM.cpp
test/: README.md  bc_remote.cpp  btree.c  btree_remote.c  indirect.c  indirect_remote.c  llama_remote.c  mcf_remote.c  mcf_remote.cpp  mcf_remote.h  profile.py  test.c  test.o.ll  test.o.mlir  test.o_llvm.mlir
