set(dialect RemoteMem)
set(dialect_namespace cira)
set(LLVM_TARGET_DEFINITIONS ${dialect}.td)
mlir_tablegen(${dialect}.h.inc -gen-op-decls -dialect=${dialect_namespace})
mlir_tablegen(${dialect}.cpp.inc -gen-op-defs -dialect=${dialect_namespace})
mlir_tablegen(${dialect}Ref.h.inc -gen-typedef-decls -typedefs-dialect=${dialect_namespace})
mlir_tablegen(${dialect}Ref.cpp.inc -gen-typedef-defs -typedefs-dialect=${dialect_namespace})
add_public_tablegen_target(MLIR${dialect}IncGen)
add_dependencies(mlir-headers MLIR${dialect}IncGen)
add_subdirectory(Transforms)